test/samples/invalid/resolving/local_global_shadow.maruir
struct M {
    b: bool;

}
fun foo(a: u8) 
locals M: u8;
{

}
